# core

./: .keyring.gpg  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml  shell.nix
buf-stream/: Cargo.toml
buf-stream/examples/: async-std-tcp-stream.rs  std-tcp-stream.rs
buf-stream/src/: futures.rs  lib.rs  std.rs
compote/: Cargo.toml
compote/examples/: tokio_std_tls.rs
compote/src/: lib.rs  time.rs
compote/src/tcp/: async_std.rs  mod.rs  std.rs  tokio.rs
compote/src/tls/: async_std.rs  mod.rs  std.rs  tokio.rs
duplex-stream/: Cargo.toml
duplex-stream/examples/: async-std-tcp-stream-buffered.rs  async-std-tcp-stream.rs  std-tcp-stream-buffered.rs  std-tcp-stream.rs
duplex-stream/src/: async.rs  blocking.rs  lib.rs
email/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
email-macros/: Cargo.toml
email-macros/src/: lib.rs
email-macros/tests/: lib.rs
email-testing-server/: Cargo.toml
email-testing-server/src/: lib.rs
email-tests/: Cargo.toml
email-tests/tests/: dynamic_backend.rs  imap.rs  maildir.rs  notmuch.rs  search_emails_query.rs  sendmail.rs  smtp.rs  static_backend.rs  sync.rs
email-tpl/: CHANGELOG.md  Cargo.toml  README.md
email-tpl/examples/: attachment.rs  encrypt.rs  interpret-show-multipart.rs  interpreter.rs  mml-advanced.rs  mml-simple.rs  sign.rs  tpl-builder.rs
email-tpl/examples/keys/: alice.key  alice.pub  bob.pub
email-tpl/src/: evaluator.rs  lib.rs  pgp.rs  tpl.rs
email-tpl/src/crypto/: mod.rs  pgp.rs
email-tpl/src/lexer/: mod.rs  part.rs  tpl.rs
email-tpl/src/mml/: compiler.rs  interpreter.rs  mod.rs  tokens.rs  tpl.rs
email-tpl/src/parser/: mod.rs  parts.rs  props.rs  tpl.rs  vals.rs
email-tpl/src/pgp/: cmds.rs  gpg.rs  mod.rs  native.rs
email-tpl/src/tpl/: header.rs  interpreter.rs  mod.rs
email-tpl/tests/: cmds_pgp.rs  gpg.rs  native_pgp.rs  pgp.rs
email-tpl/tests/gpg-home/: pubring.kbx  trustdb.gpg
email/examples/: search_emails_query.rs
email/src/: backend.rs  backend_v2.rs  config.rs  error.rs  imap.rs  imap_v2.rs  lib.rs  log.rs  maildir.rs  process.rs  retry.rs  serde.rs  smtp.rs  thread_pool.rs
email/src/account/: config.rs  error.rs  mod.rs  pgp.rs  sync.rs
email/src/autoconfig/: config.rs  dns.rs  http.rs  mod.rs
email/src/backend/: backend.rs  config.rs  context.rs  error.rs  feature.rs  id_mapper.rs  mapper.rs  mod.rs  pool.rs  sync.rs
email/src/backend_v2/: context.rs  feature.rs  mapper.rs  mod.rs  pool.rs
email/src/config/: error.rs  mod.rs
email/src/domain/: mod.rs
email/src/email/: address.rs  config.rs  date.rs  (+4 more)
email/tests/: account_sync.rs  backend.rs  backend_v2.rs  backends_features.rs  dynamic_backend.rs  emails_search_query.rs  imap.rs  imap_backend.rs  maildir.rs  maildir_backend.rs  notmuch.rs  notmuch_backend.rs  search_emails_query.rs  sendmail.rs  sendmail_sender.rs  smtp.rs  smtp_sender.rs  stalwart.rs  stalwart.toml  static_backend.rs  sync.rs  test_imap_backend.rs  test_maildir_backend.rs  test_notmuch_backend.rs  test_sendmail_sender.rs  test_smtp_sender.rs  test_sync.rs
http/: CHANGELOG.md  Cargo.toml  README.md
http/src/: error.rs  lib.rs
id-alias/: Cargo.toml
id-alias/src/: lib.rs
io/: Cargo.toml
io/src/: lib.rs  process.rs  sensitive_string.rs
keyring/: CHANGELOG.md  Cargo.toml  README.md  build.rs  org.freedesktop.Secrets.xml
keyring/examples/: keyring.rs  secret-service-blocking-std.rs
keyring/src/: cache.rs  error.rs  event.rs  keyutils.rs  lib.rs  service.rs  state.rs
keyring/tests/: keyring.rs  main.rs
m2dir/: Cargo.toml
maildir++/: CHANGELOG.md  Cargo.toml  README.md
maildir++/src/: error.rs  lib.rs
maildir++/tests/: smoke.rs
mml/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
mml/examples/: attachment.eml  attachment.rs  html.eml  html.rs  main.mime.eml  main.mml.eml  main.rs  pgp-commands.rs  pgp-gpg.rs  pgp-native.rs  pgp.eml  plain.eml  plain.rs
mml/src/: error.rs  header.rs  lib.rs
mml/tests/: .gitignore  pgp-cmds.rs  pgp-commands.rs  pgp-gpg.rs  pgp-native.rs  pgp_cmds.rs
oauth/: CHANGELOG.md  Cargo.toml  README.md
oauth/examples/: gmail.rs  outlook.rs
oauth/src/: error.rs  lib.rs
oauth2/: CHANGELOG.md  Cargo.toml  README.md
oauth2/examples/: gmail.rs  outlook.rs
oauth2/src/: authorization_code_grant.rs  client.rs  lib.rs  refresh_access_token.rs
pgp/: CHANGELOG.md  Cargo.toml  README.md
pgp/src/: client.rs  cmds.rs  config.rs  decrypt.rs  encrypt.rs  error.rs  gpg.rs  hkp.rs  hkps.rs  http.rs  lib.rs  native.rs  sign.rs  utils.rs  verify.rs  wkd.rs
pomodoro/: CHANGELOG.md  Cargo.toml  README.md
pomodoro/examples/: pomodoro-tcp.rs
pomodoro/src/: lib.rs  timer.rs
pomodoro/tests/: pomodoro.rs
process/: CHANGELOG.md  Cargo.toml  README.md
process/src/: command.rs  error.rs  lib.rs  output.rs  pipeline.rs
process/tests/: command.rs  pipeline.rs  single_cmd.rs  single_command.rs
rip-starttls/: CHANGELOG.md  Cargo.toml  README.md
rip-starttls/examples/: imap-async-std.rs  imap-smol.rs  imap-std.rs  imap-tokio.rs
rip-starttls/src/: lib.rs
secret/: CHANGELOG.md  Cargo.toml  README.md
secret/src/: derive.rs  error.rs  lib.rs
secret/tests/: command.rs  keyring.rs  raw.rs  secret.rs
shellexpand/: Cargo.toml
shellexpand-utils/: CHANGELOG.md  Cargo.toml  README.md
shellexpand-utils/src/: canonicalize.rs  error.rs  expand.rs  lib.rs
shellexpand/src/: canonicalize.rs  expand.rs  lib.rs
start-tls/: Cargo.toml
start-tls/examples/: imap-async-std-buf.rs  imap-async-std.rs  imap-futures-buf.rs  imap-futures.rs  imap-std.rs  smtp-async-std-buf.rs  smtp-async-std.rs  smtp-futures-buf.rs  smtp-futures.rs  smtp-std.rs
start-tls/src/: blocking.rs  futures.rs  lib.rs  std.rs
stoptls/: Cargo.toml
stoptls/examples/: imap-async-std.rs  imap-std.rs  imap-tokio.rs
stoptls/src/: imap.rs  lib.rs
time/: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
time/examples/: pomodoro-tcp.rs
time/src/: handler.rs  lib.rs  request.rs  response.rs  tcp.rs  timer.rs
time/tests/: multiple-tcp-clients.rs  multiple_tcp_clients.rs
(+381 files in other folders)
