[workspace]
resolver = "2"
members = [
  "buf-stream",
  "email",
  "email-macros",
  "email-testing-server",
  "http",
  "keyring",
  "mml",
  "oauth",
  "pgp",
  "process",
  "secret",
  "shellexpand-utils",
  "start-tls",
  "time",
]

[patch.crates-io]
buf-stream = { path = "./buf-stream" }
email-lib = { path = "./email" }
email-macros = { path = "./email-macros" }
http-lib = { path = "./http" }
keyring-lib = { path = "./keyring" }
mml-lib = { path = "./mml" }
oauth-lib = { path = "./oauth" }
pgp-lib = { path = "./pgp" }
process-lib = { path = "./process" }
secret-lib = { path = "./secret" }
shellexpand-utils = { path = "./shellexpand-utils" }
start-tls = { path = "./start-tls" }
time-lib = { path = "./time" }
