[workspace]
resolver = "2"
members = [
  "buf-stream",
  "email",
  "email-macros",
  "email-testing-server",
  "email-tests",
  "http",
  "keyring",
  "mml",
  "oauth",
  "pgp",
  "process",
  "rip-starttls",
  "secret",
  "shellexpand-utils",
  "time",
]

[patch.crates-io]
buf-stream = { path = "./buf-stream" }
email-lib = { path = "./email" }
email-macros = { path = "./email-macros" }
email-testing-server = { path = "./email-testing-server" }
email-tests = { path = "./email-tests" }
http-lib = { path = "./http" }
keyring-lib = { path = "./keyring" }
mml-lib = { path = "./mml" }
oauth-lib = { path = "./oauth" }
pgp-lib = { path = "./pgp" }
process-lib = { path = "./process" }
rip-starttls = { path = "./rip-starttls" }
secret-lib = { path = "./secret" }
shellexpand-utils = { path = "./shellexpand-utils" }
time-lib = { path = "./time" }
imap-client.git = "https://github.com/pimalaya/imap-client"
