[package]
name = "compote"
description = "Generic implementations of common things like TcpStream, TlsStream etc"
version = "0.1.0"
edition = "2021"

[features]
std = []
futures = ["dep:futures"]

tokio = ["dep:tokio", "dep:tokio-util", "futures"]
async-std = ["dep:async-std", "futures"]

tcp = ["tokio?/net"]
tls = []

time = ["tokio?/time"]

[dependencies]
async-native-tls = { version = "0.5", optional = true }
async-std = { version = "1.13", optional = true }
futures = { version = "0.3", optional = true }
futures-rustls = { version = "0.26", default-features = false, optional = true }
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.23", optional = true }
tokio = { version = "1.41", default-features = false, optional = true }
tokio-native-tls = { version = "0.3", default-features = true, optional = true }
tokio-rustls = { version = "0.26", default-features = true, optional = true }
tokio-util = { version = "0.7", default-features = false, features = ["compat"], optional = true }

[dev-dependencies]
byte_string = "1"
rustls-platform-verifier = "0.4"
# compote = { path = ".", features = ["std", "tokio", "async-std", "tcp", "tls", "rustls", "native-tls", "tokio-rustls", "tokio-native-tls", "futures-rustls", "async-native-tls"]}
compote = { path = ".", features = ["std", "futures", "tokio", "async-std", "tcp", "time"]}
tokio = { version = "1.41", features = ["full"] }
