[package]
name = "duplex-stream"
version = "0.1.0"
edition = "2021"

[features]
default = ["blocking", "async"]
blocking = []
async = ["dep:futures"]

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
env_logger = "0.11"
tracing = { version = "0.1", features = ["log"] }

[dependencies]
futures = { version = "0.3", optional = true }
tracing = "0.1"
