[package]
name = "email-macros"
version = "0.0.1"
description = "Macros dedicated to email-lib"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"

[lib]
name = "email_macros"
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = [
  "full",
  # "extra-traits", # for debug purpose
] }
