[package]
name = "email-testing-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "email_testing_server"

[dependencies]
arc-swap = "1.6.0"
common = { git = "https://github.com/stalwartlabs/mail-server.git", tag = "v0.9.0" }
concat-with = "0.2"
directory = { git = "https://github.com/stalwartlabs/mail-server.git", tag = "v0.9.0" }
imap = { git = "https://github.com/stalwartlabs/mail-server.git", tag = "v0.9.0" }
jmap = { git = "https://github.com/stalwartlabs/mail-server.git", tag = "v0.9.0" }
jmap_proto = { git = "https://github.com/stalwartlabs/mail-server.git", tag = "v0.9.0" }
log = "0.4"
managesieve = { git = "https://github.com/stalwartlabs/mail-server.git", tag = "v0.9.0" }
smtp = { git = "https://github.com/stalwartlabs/mail-server.git", tag = "v0.9.0" }
store = { git = "https://github.com/stalwartlabs/mail-server.git", default-features = false, features = ["sqlite"], tag = "v0.9.0" }
tempfile = "3.3"
tokio = { version = "1.23", features = ["full"] }
tokio-rustls = "0.26.0"
utils = { git = "https://github.com/stalwartlabs/mail-server.git", tag = "v0.9.0" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"
