[package]
name = "email-tests"
description = "Integration tests for email-lib"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
async-trait = "0.1"
chrono = "0.4"
concat-with = "0.2"
email-lib = { path = "../email", features = ["full"] }
email-testing-server = { path = "../email-testing-server" }
mail-builder = "0.3"
maildirs = "0.2"
mml-lib = { path = "../mml" }
notmuch = "=0.8.0"
once_cell = "1"
process-lib = { path = "../process" }
secret-lib = { path = "../secret" }
tempfile = "3.3"
test-log = { version = "0.2", default-features = false, features = ["color", "trace"] }
tokio = { version = "1.23", features = ["full"] }
