[package]
name = "pimalaya-email-tpl"
version = "0.2.0"
description = "Rust library for representing MIME Messages as Emacs MIME Meta Language templates."
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["email", "smtp", "mailer", "message", "sendmail"]

[lib]
name = "pimalaya_email_tpl"

[dev-dependencies]
concat-with = "0.2"
tempfile = "3.3"

[dependencies]
chumsky = "0.9"
log = "0.4"
mail-builder = { git = "https://github.com/stalwartlabs/mail-builder.git" }
mail-parser = "=0.8.2"
pimalaya-process = "=0.0.2"
shellexpand = "2.1"
thiserror = "1.0"
tree_magic = "0.2"
