[package]
name = "pimalaya-email-tpl"
version = "0.3.2-beta"
description = "Rust library for representing MIME Messages as Emacs MIME Meta Language templates."
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["email", "text-processing"]
keywords = ["email", "template", "mml", "emacs", "mime"]

[lib]
name = "pimalaya_email_tpl"

[features]
default = ["cmds-pgp"]
cmds-pgp = ["pimalaya-process"]
gpg = ["gpgme"]
native-pgp = ["pimalaya-keyring", "pimalaya-pgp", "pimalaya-secret"]

[dev-dependencies]
concat-with = "0.2"
env_logger = "0.10"
tempfile = "3.3"
tokio = { version = "1.23", default-features = false, features = ["fs", "macros", "rt"] }

[dependencies]
async-recursion = "1.0"
chumsky = "0.9"
log = "0.4"
mail-builder = "=0.3.0"
mail-parser = "=0.8.2"
nanohtml2text = "0.1"
shellexpand = "2.1"
thiserror = "1.0"
tree_magic = "0.2"

# cmd-pgp feature
pimalaya-process = { path = "../process", optional = true }

# native-pgp feature
pimalaya-keyring = { path = "../keyring", optional = true }
pimalaya-pgp = { path = "../pgp", optional = true }
pimalaya-secret = { path = "../secret", optional = true }

# gpg feature
gpgme = { version = "0.11", optional = true }
