[package]
name = "email-lib"
version = "0.24.1"
description = "Rust library to manage emails"
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/email-lib/latest/email/"
repository = "https://git.sr.ht/~soywod/pimalaya/tree/master/item/email/README.md"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["email", "maildir", "imap", "smtp", "sendmail"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--document-private-items"]

[lib]
name = "email"

[features]
default = [
  # Enables the IMAP backend, which allows management of local or
  # remote mailboxes and emails located on any IMAP server. Paired
  # with the `autoconfig` feature, it also allows to discover IMAP
  # configuration from a simple email address.
  #
  # doc: <https://pimalaya.org/himalaya/cli/latest/usage/advanced/imap.html>
  # "imap",

  # Enables the Maildir backend, which allows management of folders
  # and emails located in a local Maildir directory, using file
  # system.
  #
  # doc: <https://pimalaya.org/himalaya/cli/latest/usage/advanced/maildir.html>
  # "maildir",

  # Enables the Notmuch backend, which allows management of emails
  # located in a Notmuch database. Since Notmuch needs a Maildir to
  # work, it also enables the `maildir` feature.
  #
  # doc: <https://pimalaya.org/himalaya/cli/latest/usage/advanced/notmuch.html>
  # "notmuch",
  
  # Enables the SMTP backend, which allows sending emails to any SMTP
  # server. Paired with the `autoconfig` feature, it also allows to
  # discover SMTP configuration from a simple email address.
  #
  # doc: <https://pimalaya.org/himalaya/cli/latest/usage/advanced/smtp.html>
  # "smtp",
  
  # Enables the sendmail backend, which allows sending emails via any
  # sendmail-compatible command.
  #
  # doc: <https://pimalaya.org/himalaya/cli/latest/usage/advanced/sendmail.html>
  # "sendmail",

  "autoconfig",
  # "derive",
  # "notify",
  # "oauth2",
  # "sync",
  # "tracing",
  # "watch",

  # "pgp-commands",
  # "pgp-gpg",
  # "pgp-native",
]

imap = [
  "dep:utf7-imap",
  "dep:imap-client",
]

maildir = [
  "dep:maildirpp",
  "dep:notify",
  "dep:rayon",
]

smtp = [
  "dep:mail-send",
]

sendmail = [
  # nothing
]

autoconfig = [
  "dep:email_address",
  "dep:hickory-resolver",
  "dep:hyper",
  "dep:hyper-rustls",
  "dep:serde",
  "dep:serde-xml-rs",
]

derive = [
  "dep:serde",
  "serde/derive",
  "mml-lib/derive",
  "secret-lib/derive",
  "process-lib/derive",
  "keyring-lib?/derive",
]

notify = [
  "dep:notify-rust",
]

oauth2 = [
  "dep:oauth-lib"
]

sync = [
  "dep:advisory-lock",
  "dep:dirs",
  "maildir",
]

watch = [
  # nothing
]

pgp = [] # used as internal guard
pgp-commands = ["mml-lib/pgp-commands", "pgp"]
pgp-gpg = ["mml-lib/pgp-gpg", "pgp"]
pgp-native = ["dep:pgp-lib", "dep:keyring-lib", "pgp", "mml-lib/pgp-native"]

[dev-dependencies]
concat-with = "0.2"
email-testing-server = { path = "../email-testing-server" }
env_logger = "0.10"
tempfile = "3.3"
tokio = { version = "1.23", features = ["full"] }

[dependencies]
advisory-lock = { version = "0.3", optional = true }
async-trait = "0.1"
chrono = "0.4"
chumsky = { version = "=1.0.0-alpha.7", default-features = false, features = ["std", "label"] }
convert_case = "0.5"
dirs = { version = "4.0", optional = true }
email-macros = "=0.0.2"
email_address = { version = "0.2", optional = true, default-features = false }
futures = "0.3"
hickory-resolver = { version = "0.24", optional = true, features = ["dns-over-rustls"] }
hyper = { version = "0.14", optional = true, default-features = false, features = [ "http1", "http2" ] }
hyper-rustls = { version = "0.24", optional = true }
imap-client = { version = "=0.1.0", optional = true }
keyring-lib = { version = "=0.4.2", optional = true }
mail-builder = "0.3"
mail-parser = "0.9"
mail-send = { version = "0.4", optional = true }
maildirpp = { version = "=0.0.2", optional = true }
mml-lib = "=1.0.12"
notify = { version = "6", optional = true, default-features = false, features = ["macos_kqueue"] }
notify-rust = { version = "4", optional = true }
notmuch = { version = "=0.8.0", optional = true }
oauth-lib = { version = "=0.1.1", optional = true }
once_cell = "1"
ouroboros = "0.15"
paste = "1"
petgraph = "0.6"
pgp-lib = { version = "=0.2.0", optional = true }
process-lib = "=0.4.2"
rayon = { version = "1.6", optional = true }
regex = "1.5"
secret-lib = { version = "=0.4.4" }
serde = { version = "1", optional = true }
serde-xml-rs = { version = "0.6", optional = true }
shellexpand-utils = "=0.2.1"
thiserror = "1"
tokio = { version = "1.23", default-features = false, features = ["macros", "fs", "net"] }
tokio-rustls = "0.25"
tracing = { version ="0.1.40" , optional = true }
tree_magic_mini = "3"
urlencoding = "2.1"
utf7-imap = { version = "=0.3.2", optional = true }
