[package]
name = "email-lib"
version = "0.25.0"
description = "Rust library to manage emails"
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/email-lib/latest/email/"
repository = "https://git.sr.ht/~soywod/pimalaya/tree/master/item/email/README.md"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["email", "maildir", "imap", "smtp", "sendmail"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--document-private-items"]

[lib]
name = "email"

[features]
default = []
full = [
  # Enables the IMAP backend, which allows management of local or
  # remote mailboxes and emails located on any IMAP server. Paired
  # with the `autoconfig` feature, it also allows to discover IMAP
  # configuration from a simple email address.
  #
  # doc: <https://pimalaya.org/himalaya/cli/latest/usage/advanced/imap.html>
  "imap",

  # Enables the Maildir backend, which allows management of folders
  # and emails located in a local Maildir directory, using file
  # system.
  #
  # doc: <https://pimalaya.org/himalaya/cli/latest/usage/advanced/maildir.html>
  "maildir",

  # Enables the Notmuch backend, which allows management of emails
  # located in a Notmuch database. Since Notmuch needs a Maildir to
  # work, it also enables the `maildir` feature.
  #
  # doc: <https://pimalaya.org/himalaya/cli/latest/usage/advanced/notmuch.html>
  "notmuch",

  # Enables the SMTP backend, which allows sending emails to any SMTP
  # server. Paired with the `autoconfig` feature, it also allows to
  # discover SMTP configuration from a simple email address.
  #
  # doc: <https://pimalaya.org/himalaya/cli/latest/usage/advanced/smtp.html>
  "smtp",

  # Enables the sendmail backend, which allows sending emails via any
  # sendmail-compatible command.
  #
  # doc: <https://pimalaya.org/himalaya/cli/latest/usage/advanced/sendmail.html>
  "sendmail",

  # Enables the discovery of IMAP and SMTP configurations, based on
  # the Thunderbird AutoConfig protocol.
  #
  "autoconfig",

  # Enables serde/derive features as well as (de)serialization of all
  # types.
  #
  "derive",

  # Enables the global user keyring system for storing and retieving
  # secrets.
  #
  "keyring",
  
  # Enables the notify watch action.
  #
  "notify",

  # Enables OAuth 2.0 support.
  #
  "oauth2",

  # Enables thread pool system, for opening batch of connections
  # (mostly useful for IMAP and SMTP).
  #
  "pool",

  # Enables mailbox and emails synchronization.
  #
  "sync",

  # Enables the envelope threading support.
  #
  "thread",

  # Enables logs based on the `tracing` crate.
  #
  "tracing",

  # Enables watch backend features.
  #
  "watch",

  # Enables PGP support using shell commands.
  #
  "pgp-commands",

  # Enables PGP support using GPG lib.
  #
  "pgp-gpg",

  # Enables PGP support using native Rust implementation of OpenPGP
  # standard.
  #
  "pgp-native",
]

imap = [
  "dep:utf7-imap",
  "dep:imap-client",
  "dep:imap-next",
  "tokio/sync",
]

maildir = [
  "dep:maildirs",
  "dep:notify",
  "dep:rayon",
  "tokio/sync",
]

notmuch = [
  "dep:notmuch",
  "maildir",
]

smtp = [
  "dep:mail-send",
  "dep:tokio-rustls",
  "tokio/sync",
]

sendmail = [
  # nothing
]

autoconfig = [
  "dep:email_address",
  "dep:futures",
  "dep:hickory-resolver",
  "dep:http-body-util",
  "dep:hyper",
  "dep:hyper-rustls",
  "dep:hyper-util",
  "dep:serde",
  "dep:serde-xml-rs",
]

derive = [
  "dep:serde",
  "serde/derive",
  "chrono/serde",
  "mml-lib/derive",
  "secret-lib/derive",
  "process-lib/derive",
  "keyring-lib?/derive",
]

keyring = [
  "secret-lib/keyring-tokio",
]

notify = [
  "dep:notify-rust",
]

oauth2 = [
  "dep:oauth-lib",
  "keyring", # TODO: make this dep optional
]

pool = [
  "dep:futures",
]

sync = [
  "dep:advisory-lock",
  "dep:dirs",
  "dep:futures",
  "maildir",
]

thread = [
  "dep:petgraph",
]

watch = [
  "tokio/sync",
]

pgp = [] # used as internal guard
pgp-commands = ["mml-lib/pgp-commands", "pgp"]
pgp-gpg = ["mml-lib/pgp-gpg", "pgp"]
pgp-native = ["dep:pgp-lib", "dep:keyring-lib", "mml-lib/pgp-native", "pgp"]

[dev-dependencies]
concat-with = "0.2"
env_logger = "0.10"
tempfile = "3.3"
tokio = { version = "1.23", features = ["full"] }

[dependencies]
advisory-lock = { version = "0.3", optional = true }
async-trait = "0.1"
chrono = "0.4"
chumsky = { version = "=1.0.0-alpha.7", default-features = false, features = ["std", "label"] }
dirs = { version = "4.0", optional = true }
email-macros = "=0.0.2"
email-testing-server = { path = "../email-testing-server", optional = true }
email_address = { version = "0.2", optional = true, default-features = false }
futures = { version = "0.3", optional = true }
hickory-resolver = { version = "0.24", optional = true, features = ["dns-over-rustls"] }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.4", optional = true, default-features = false, features = [ "client", "http1", "http2" ] }
hyper-rustls = { version = "0.27", optional = true }
hyper-util = { version = "0.1", optional = true, default-features = false, features = [ "client-legacy" ] }
imap-client = { version = "=0.1.3", optional = true }
imap-next = { version = "0.2", optional = true, features = ["expose_stream", "tag_generator", "starttls", "ext_id", "ext_metadata"] }
keyring-lib = { version = "=0.4.3", optional = true }
mail-builder = "0.3"
mail-parser = "0.9"
mail-send = { version = "0.4", optional = true, default-features = false, features = ["aws-lc-rs", "logging", "tls12"] }
maildirs = { version = "=0.2.2", optional = true }
mml-lib = "=1.0.14"
notify = { version = "6", optional = true, default-features = false, features = ["macos_kqueue"] }
notify-rust = { version = "4", optional = true }
notmuch = { version = "=0.8.0", optional = true }
oauth-lib = { version = "=0.1.1", optional = true }
once_cell = "1"
ouroboros = "0.15"
paste = "1"
petgraph = { version = "0.6", optional = true }
pgp-lib = { version = "=0.2.0", optional = true }
process-lib = "=0.4.2"
rayon = { version = "1.6", optional = true }
regex = "1.5"
secret-lib = { version = "=0.4.6", default-features = false, features = ["command"] }
serde = { version = "1", optional = true }
serde-xml-rs = { version = "0.6", optional = true }
shellexpand-utils = "=0.2.1"
thiserror = "1"
tokio = { version = "1.23", default-features = false, features = ["fs", "macros", "net", "rt"] }
tokio-rustls = { version = "0.26", optional = true }
tracing = { version ="0.1.40" , optional = true }
tree_magic_mini = "3"
urlencoding = "2.1"
utf7-imap = { version = "=0.3.2", optional = true }
