[package]
name = "pimalaya-id-alias"
version = "0.0.1"
description = "Rust library to manage auto-increment integer aliases for unfriendly ids."
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["pim", "id", "alias", "auto-increment", "sqlite"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "pimalaya_id_alias"

[dependencies]
log = "0.4"
md5 = "0.7"
thiserror = "1.0"

[target.'cfg(target_env = "musl")'.dependencies]
rusqlite = { version = "0.29", default-features = false, features = [] }
[target.'cfg(not(target_env = "musl"))'.dependencies]
rusqlite = { version = "0.29", default-features = false, features = ["bundled"] }
