[package]
name = "keyring-lib"
description = "High-level async API for keyring-rs, a cross-platform Rust library to manage credentials"
version = "1.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["asynchronous"]
keywords = ["password", "credential", "keychain", "keyring", "secret"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/keyring-lib/latest/keyring/"
repository = "https://github.com/pimalaya/core/tree/master/keyring/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--document-private-items"]

[lib]
name = "keyring"

[features]
default = [
  "tokio",
  #"async-std",
  "rustls",
  #"openssl",
  #"derive",
  #"vendored",
]

# Async runtime
#
tokio = ["dep:tokio", "native/tokio"]
async-std = ["dep:async-std", "native/async-io"]

# Rust crypto
#
rustls = ["native/crypto-rust"]
openssl = ["native/crypto-openssl"]

# Serde (de)serialization
#
derive = ["dep:serde"]

# Vendored (mostly for OpenSSL)
#
vendored = ["native/vendored"]

[dev-dependencies]
async-std = { version = "1.13", features = ["unstable", "attributes"] }
test-log = { version = "0.2", default-features = false, features = ["color", "trace"] }
tokio = { version = "1.23", features = ["full"] }

[dependencies]
async-std = { version = "1.13", optional = true }
native = { package = "keyring", version = "3", git = "https://github.com/soywod/keyring-rs.git", branch = "secret-service-with-keyutils", default-features = false, features = ["linux-native-async-persistent", "apple-native", "windows-native"] }
once_cell = "1"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1"
tokio = { version = "1.23", optional = true, default-features = false }
tracing = "0.1"
