[package]
name = "keyring-lib"
description = "High-level, asynchronous API for keyring-rs, a cross-platform Rust library to manage credentials"
version = "1.0.2"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["asynchronous"]
keywords = ["password", "credential", "keychain", "keyring", "secret"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/keyring-lib/latest/keyring/"
repository = "https://github.com/pimalaya/core/tree/master/keyring/"

[package.metadata.docs.rs]
features = ["derive"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "keyring"

[features]

# MacOS Security framework
#
security-framework = ["dep:security-framework"]

# Secret service, based on D-Bus
#
secret-service-blocking = ["dep:dbus"]
secret-service-nonblock = ["dep:dbus", "dbus/futures"]

# I/O connectors
#
std = []

# Serde de/serialization
#
# serde = ["dep:serde"]

# Vendored
#
# vendored = ["dbus/vendored"]

[build-dependencies]
dbus-codegen = { version = "0.12", default-features = false }

[dev-dependencies]
dbus = { version = "0.9" }
keyring-lib = { path = ".", features = ["security-framework", "secret-service-blocking", "secret-service-nonblock", "std"] }

[dependencies]
secrecy = { version = "0.10" }
# serde = { version = "1", features = ["derive"], optional = true }
thiserror = { version = "2" }
tracing = { version = "0.1" }
security-framework = { version = "3", default-features = false, optional = true }
dbus = { version = "0.9", optional = true }

# [target.'cfg(target_os = "windows")'.dependencies]
# byteorder = { version = "1.2" }
# windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Credentials"] }