[package]
name = "maildirpp"
version = "0.0.1"
description = "Rust library to manipulate Maildir++ emails."
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["email", "filesystem"]
keywords = ["pim", "email", "maildir", "maildir++"]

[dev-dependencies]
tempfile = "3.0.8"
walkdir = "2.2.7"
percent-encoding = "1.0.1"

[dependencies]
gethostname = "0.4"
log = "0.4"
mail-parser = "0.8"
ouroboros = "0.15"
thiserror = "1.0"
