[package]
name = "maildirpp"
version = "0.0.3"
description = "Rust library to manipulate Maildir++ emails."
homepage = "https://pimalaya.org/"
repository = "https://git.sr.ht/~soywod/pimalaya/"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["email", "filesystem"]
keywords = ["pim", "email", "maildir", "maildir++"]

[dev-dependencies]
mail-parser = "0.8"
percent-encoding = "1.0.1"
tempfile = "3.0.8"
walkdir = "2.2.7"

[dependencies]
gethostname = "0.4"
log = "0.4"
thiserror = "1.0"
